# Tris

./: Boxes.py  CONTRIBUTING.md  Matches.json  Moves.py  README.md  Tris.py  __init__.py  index.md  pyproject.toml  table.py
.github/: README.md
