[project]
name = "Tris"
version = "1.3.7"
description = "Tris module to play tris"
authors = [
    "FLAK-ZOSO <mattia.marchese.2006@gmail.com>"
]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"
python = "^3.10"
homepage = "https://github.com/FLAK-ZOSO/Tris"
repository = "https://github.com/FLAK-ZOSO/Tris"
documentation = "https://github.com/FLAK-ZOSO/Tris"

keywords = ["packaging", "dependency", "infer", "pyproject.toml"]

classifiers = [
    "Topic :: Software Development"
]

# Requirements
[dev-dependencies]
black = { version = "^18.3-alpha.0", python = "^3.10" }

[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"
